--- a/client/src/my/sheeponthetable/gui/AddNewSheep.form
+++ b/client/src/my/sheeponthetable/gui/AddNewSheep.form
@@ -14,6 +14,7 @@
     </Component>
   </NonVisualComponents>
   <Properties>
+    <Property name="defaultCloseOperation" type="int" value="2"/>
     <Property name="title" type="java.lang.String" value="Register new Sheep"/>
     <Property name="autoRequestFocus" type="boolean" value="false"/>
     <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
