--- a/client/src/my/sheeponthetable/gui/EditSheep.form
+++ b/client/src/my/sheeponthetable/gui/EditSheep.form
@@ -180,8 +180,14 @@
         <Component class="javax.swing.JTextField" name="txtNick">
         </Component>
         <Component class="javax.swing.JTextField" name="txtWeight">
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="txtWeightActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JTextField" name="txtBorn">
+          <AuxValues>
+            <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value=""/>
+          </AuxValues>
         </Component>
         <Component class="javax.swing.JLabel" name="commentLabel">
           <Properties>
