--- a/client/src/my/sheeponthetable/gui/FarmTools.form
+++ b/client/src/my/sheeponthetable/gui/FarmTools.form
@@ -144,7 +144,7 @@
 
       <Layout class="org.netbeans.modules.form.compat2.layouts.support.JScrollPaneSupportLayout"/>
       <SubComponents>
-        <Component class="javax.swing.JList" name="jListU">
+        <Component class="javax.swing.JList" name="jListUser">
           <Properties>
             <Property name="model" type="javax.swing.ListModel" editor="org.netbeans.modules.form.editors2.ListModelEditor">
               <StringArray count="5">
